# PyVAR3

./: .gitignore  LICENSE  README.md  pyproject.toml
debug_tests/: Jan_No3Vg_2.csv  Nov_No17IdVg.csv  gpib.py  gpib_command.py  multichannel_sweep_voltage.py  one_sweep_voltage.py  output_format.py  temp_test.ipynb  temp_test.py  temperature_logger.py  test_gpib.py  test_gpib_command.py  test_gpib_command2.py  test_gpib_command3.py  test_three_way_sweep.py  test_two_way_sweep.py  three_way_IdVg_sweep.py  three_way_IdVg_sweep_nmos.py  three_way_IdVg_sweep_nmos_180nm.py  three_way_IdVg_sweep_pmos.py  three_way_IdVg_sweep_pmos_180nm.py  three_way_sweep.py  two_way_sweep.py
debug_tests/data/: Jan_No3Vg_1.csv
docs/: architecture.md
examples/: camera_test.py  gpib_command.py  multichannel_sweep_voltage.py  one_sweep_voltage.py  output_format.py  temp2.py  temp_test.ipynb  temp_test.py  temperature_logger.py  three_way_IdVg_sweep.py  three_way_IdVg_sweep_nmos.py  three_way_IdVg_sweep_nmos_180nm.py  three_way_IdVg_sweep_pmos.py  three_way_IdVg_sweep_pmos_180nm.py  three_way_sweep.py  timelapse.py  two_way_sweep.py
src/: main.py
src/data_process/: export.py  plot2d.py  plot3d.py  plot3d2.py  plot3d3.py  read_data_process.py
src/gpib/: exceptions.py  gpib_command.py  (+3 more)
tests/: conftest.py  test_config.py  test_data_process.py  test_export.py  test_gpib.py  test_gpib_command_b1500.py  test_gpib_command_model335.py  test_gpib_communication.py  test_measurement_sweep.py  test_measurement_worker.py  test_packaging.py  test_plot_helpers.py  test_profiles.py  test_utils.py
(+20 files in other folders)
