[project]
name = "pyvar3"
version = "0.1.0"
description = "Multi-parameter sweep measurement tool for semiconductor device characterization"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "pyvisa>=1.13",
    "PySide6>=6.5",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "plotly>=5.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
pyvar3 = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
